# BWKI-2026-LinguaGraph

./: .gitignore  CITATION.cff  CUsersrongjDesktop学校BWKI-2026-备战tempdebug_llm.txt  FUTURE_WORK.md  LICENSE  LINGUAGRAPH_DATA_INVENTORY.md  LINGUAGRAPH_DATA_LINEAGE.md  MODEL_CARD.md  README.md  README_DE.md  README_ZH.md  RESEARCH_RULES.md  TASKS_120_MODEL_BENCHMARK.md  TASKS_FIX_COVERAGE.md  TASKS_FOR_PARALLEL.md  TASKS_FOR_PARALLEL_ROUND2.md  diff.txt  find_div.py  find_div2.py  find_div3.py  find_orphan.py  fix_duplicate.py  fix_extra_close.py  fix_html_structure.py  manifest.json  open.bat  output.txt  portal_audit.py  portal_audit2.py  pyproject.toml  requirements.txt  run_all_models.bat  run_workbench.py  start_workbench.bat  sync_readmes.py  tmp_compare.py  tmp_de_check.txt  tmp_fix.py  verify_fix.py  wrangler.jsonc
.claude/: CLAUDE.md  PROJECT_CYCLE.md  settings.json
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
_deploy/: README_DE.md  README_ZH.md  data.js  i18n.js  index.html  sync_readmes.py  template_data.js  v1_baseline.html
cognitive-space/: README.md  index.html
config/: concept_mapping.json  concept_taxonomy.json  config.yaml  cross_language_mapping.json  normalization_map.json
data/: DATA_MANIFEST.md  consent_form.md
docs/: ARCHITECTURE.md  CHANGELOG.md  PRIORITIES.md  PROJECT_LOG.md  bwki_paper_outline.md  bwki_paper_outline_v2.md  cognitive_metrics_framework.md  corpus-status.md  coverage_score_definition.md  creative_submission.md  data_arrival_checklist.md  data_expansion_task.md  demo_script.md  figure_plan.md  (+33 more)
(+1647 files in other folders)
