[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "linguagraph"
version = "0.1.0"
description = "BWKI 2026 - Mapping How Language Shapes Thinking"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "networkx>=3.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "openai>=1.0.0",
    "beautifulsoup4>=4.11",
    "flask>=3.0",
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
